# UniAgent-AFM

./: .gitignore  LLM_INTEGRATION_SUMMARY.md  README.md  README_MHQA.md  demo.json  pyproject.toml  quick_retrieval_service.py  requirements.txt  run_full_math_agent.py  run_full_mhqa_agent.py  run_full_swe_agent.py  simple_retrieval_service.py  test_llm_local.json  test_llm_mhqa.py  test_output_real.json
agent_systems/MHQA_agent/: main.py  tools.py
agent_systems/Math_agent/: afm_schema.py  agent.py  agent_clean.py  main.py  main_clean.py  tools.py
agent_systems/SWE_agent/: Main.py
agent_systems/Video_multiagent/: main.py
agent_systems/legal_agent/: agent.py  main.py  tools.py
agent_systems/legal_agent/prompts/: legal_agent_system.j2
agent_systems/math_agent/: agent.py  main.py  tools.py
agent_systems/math_agent/prompts/: math_agent_system.j2
evaluation/: README.md  download_models.sh  evaluate.py
myenv/: pyvenv.cfg
samples/: legal_sample.afm.jsonl  math_sample.afm.jsonl
scripts/: format_gsm8k.py  mhqa_trajectory_to_dataset.py  run_math_agent.sh  validate_afm.py
sft/: README.md  mhqa_trajectory_to_dataset.py  sft.py  trajectory_to_dataset.py
sft/data/: download_trajectories.sh
