[project]
name = "bookish-octo-guacamole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.48.0",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.35.3",
    "lm-eval>=0.4.9",
    "mergekit",
    "numpy>=2.3.3",
    "pyyaml>=6.0.3",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "trl>=0.23.0",
]

[tool.uv.sources]
mergekit = { git = "https://github.com/arcee-ai/mergekit.git", rev = "d4b4b6c08f9e7014c0acf1c4402b9409d778a79e" }
